# mogs_tinyxml

./: .gitignore  CMakeLists.txt  MoGS_Tinyxml.pc.in  MoGS_TinyxmlConfig.cmake.in  MoGS_tinyxml.pc.in  additionnal_tinyxml.h  install_packages_ubuntu.sh
include/: additionnal_tinyxml.h  tinyxml2.h
src/: additionnal_tinyxml.cpp  tinyxml2.cpp
